{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 9,
  "lineage": "f01afde0-a003-84ca-7bfc-a225174972fd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-06a03322ef46c5cff",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy-http-sg"
                ]
              }
            ],
            "id": "sg-06a03322ef46c5cff",
            "name": "prod-ivy-http-sg",
            "tags": {
              "Name": "prod-ivy-http-sg"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-03a466018db8b4f0b",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy-https-sg"
                ]
              }
            ],
            "id": "sg-03a466018db8b4f0b",
            "name": "prod-ivy-https-sg",
            "tags": {
              "Name": "prod-ivy-https-sg"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-067cd4b74209ab576",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy-ssh-sg"
                ]
              }
            ],
            "id": "sg-067cd4b74209ab576",
            "name": "prod-ivy-ssh-sg",
            "tags": {
              "Name": "prod-ivy-ssh-sg"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          }
        }
      ]
    }
  ]
}